# SqlGraph

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-07-08-sqlgraph-implementation.md  2026-07-16-lineage-explorer.md
docs/superpowers/specs/: 2026-07-08-sqlgraph-design.md  2026-07-16-lineage-explorer-design.md
examples/: df_sample.csv
examples/ads_pipeline/: 01_stg_impressions.sql  02_stg_clicks.sql  03_dwd_ad_event.sql  04_dws_ad_daily.sql  05_dws_creative_daily.sql  06_ads_creative_report.sql  07_stg_conversions.sql  08_stg_user_profile.sql  09_dwd_attribution_wide.sql  10_dws_funnel_events.sql  11_ads_advertiser_daily.sql  README.md  run_demo.py  schema.csv
sqlgraph/: __init__.py  api.py  cli.py  playground.py
sqlgraph/builder/: __init__.py  graph_builder.py  table_registry.py
sqlgraph/input/: __init__.py  csv_schema.py  dataframe.py  sql_source.py
sqlgraph/model/: __init__.py  edges.py  graph.py  nodes.py
sqlgraph/parser/: __init__.py  base.py  expr_dag.py
sqlgraph/serialize/: __init__.py  csv.py  graphrag.py  json_output.py  networkx.py
sqlgraph/serve/: __init__.py  graph_index.py  index_io.py  server.py
sqlgraph/serve/web/: playground.html.j2  search.html.j2  shell.html.j2  viewer.html.j2
sqlgraph/serve/web/static/: app.css  detail.js  graph.js
sqlgraph/utils/: __init__.py  batch.py  errors.py  logging.py  notebook.py
sqlgraph/visualize/: __init__.py  colors.py  html.py  layouts.py
sqlgraph/visualize/templates/: graph.html.j2
tests/test_builder/: test_builder.py
tests/test_input/: test_csv_schema.py  test_sql_source.py
tests/test_integration/: test_api.py  test_e2e.py
tests/test_model/: test_edges.py  test_graph.py  test_nodes.py
tests/test_parser/: __init__.py  test_basic.py
tests/test_serialize/: test_serialize.py
tests/test_serve/: test_graph_index.py  test_index_io.py  test_server_api.py
tests/test_utils/: test_batch.py  test_errors.py  test_logging.py  test_notebook.py
tests/test_visualize/: test_html.py  test_playground.py
