[tool.poetry]
name = "sqlgraph-lineage"
version = "0.1.0"
description = "A lightweight SQL lineage and data asset graph construction framework"
authors = ["sqlgraph contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "sqlgraph"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlglot = ">=25.0.0"
pandas = ">=2.0.0"
typer = ">=0.9.0"
jinja2 = ">=3.1.0"
rich = ">=13.0.0"
networkx = {version = ">=3.0", optional = true}
ipython = {version = ">=8.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"

[tool.poetry.extras]
notebook = ["ipython"]
graph = ["networkx"]
all = ["networkx", "ipython"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
