[tool.poetry]
name = "sqlgraph-lineage"
version = "0.1.0"
description = "SQL-to-Knowledge-Graph engine for data warehouses: lineage, columns, and reusable transformation logic."
authors = ["sqlgraph contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Liyurun/SqlGraph"
repository = "https://github.com/Liyurun/SqlGraph"
documentation = "https://github.com/Liyurun/SqlGraph#readme"
keywords = ["sql", "lineage", "data-lineage", "knowledge-graph", "data-warehouse", "sqlglot", "graphrag", "data-governance"]
packages = [{include = "sqlgraph"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.scripts]
sqlgraph = "sqlgraph.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
sqlglot = ">=25.0.0"
pandas = ">=2.0.0"
typer = ">=0.9.0"
jinja2 = ">=3.1.0"
rich = ">=13.0.0"
networkx = {version = ">=3.0", optional = true}
ipython = {version = ">=8.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"

[tool.poetry.extras]
notebook = ["ipython"]
graph = ["networkx"]
all = ["networkx", "ipython"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
